midi basic features

--- a/static/index.html
+++ b/static/index.html
@@ -11,5 +11,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="bundle.js"></script>
+
+    <input type="button" id="player" value="play"></div>
 </body>
 </html>
