--- a/static/index.html
+++ b/static/index.html
@@ -4,14 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css"></link>
+    <link rel="stylesheet" type="text/css" href="piano.css"></link>
     <title>theory zero</title>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="bundle.js"></script>
-
-    <input type="button" id="player" value="play"></div>
 </body>
 </html>
