Final commit before demo.

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
     <title>theory zero</title>
 </head>
 <body>
+    <div id="player"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
